src/objects/Zephr_User_Account_Grant__c.object
<CustomObject>
    <fields>
        <fullName>Subscription_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription User</label>
        <referenceTo>Subscription_User__c</referenceTo>
        <relationshipLabel>Zephr User Account Grants</relationshipLabel>
        <relationshipName>Zephr_User_Account_Grants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zephr_API_URL__c</fullName>
        <formula>HYPERLINK(&apos;https://console.zephr.com/v3/accounts/&apos;+Zephr_Account__r.Zephr_Id__c +&apos;/users/&apos;+  Zephr_User__r.Zephr_Id__c, &apos;Open in Zephr&apos; , &apos;_blank&apos;)</formula>
        <inlineHelpText>click to open in zpehr console</inlineHelpText>
        <label>Zephr API URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Account_Id__c</fullName>
        <formula>Zephr_Account__r.Zephr_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zephr Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Account__c</fullName>
        <label>Zephr Account</label>
        <referenceTo>Zephr_Account__c</referenceTo>
        <relationshipLabel>Zephr User Account Grants</relationshipLabel>
        <relationshipName>Zephr_User_Account_Grants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zephr_Composite_Id__c</fullName>
        <description>Composite ID made of account_id and user_id for use in migrations</description>
        <externalId>true</externalId>
        <label>Zephr Composite Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Message__c</fullName>
        <label>Zephr Integration Message</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Status__c</fullName>
        <label>Zephr Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zephr_Integration_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zephr_User_Id__c</fullName>
        <formula>Zephr_User__r.Zephr_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zephr User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_User__c</fullName>
        <label>Zephr User</label>
        <referenceTo>Zephr_User__c</referenceTo>
        <relationshipLabel>Zephr User Account Grants</relationshipLabel>
        <relationshipName>Zephr_User_Account_Grants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Zephr User Account Grant</label>
    <nameField>
        <displayFormat>ZUAG-{000000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zephr User Account Grants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>